--- a/tools/dbupload/app/index.html
+++ b/tools/dbupload/app/index.html
@@ -30,7 +30,7 @@
             </section>
             <label for="url">URL</label>
             <input type="text" id="url" name="url">
-            </form>
+        </form>
         <form id="acquisition">
             <h2>Acquisition Parameters</h2>
             <label for="type">Type</label>
@@ -68,14 +68,14 @@
             <section>
                 <div>
                     <label for="pixel_size_um">Pixel Size (um)</label>
-                    <input type="text" id="pixel_size_um" name="pixel_size_um" placeholder="0.035">
+                    <input type="text" id="pixel_size_um" name="pixel_size_um" placeholder="0.35">
                 </div>
                 <div>
                     <label for="resolution">Resolution</label>
                     <input type="text" id="resolution" name="resolution" placeholder="12bit">
                 </div>
             </section>
-            </form>
+        </form>
         <form id="illumination">
             <h2>Illumination Parameters</h2>
             <section>
@@ -105,7 +105,8 @@
                 </div>
                 <div>
                     <label for="pattern_radial_thickness_pix">Radial Thickness</label>
-                    <input type="text" id="pattern_radial_thickness_pix" name="pattern_radial_thickness_pix" placeholder="10">
+                    <input type="text" id="pattern_radial_thickness_pix" name="pattern_radial_thickness_pix"
+                        placeholder="10">
                 </div>
             </section>
             <section>
@@ -128,7 +129,7 @@
                     <input type="text" id="na_inner" name="na_inner">
                 </div>
             </section>
-            </form>
+        </form>
     </main>
     <footer>
         <a href="javascript:void(0);" id="clear"><i class="fa-solid fa-circle-xmark"></i></a>
